package com.powersense.inventory.devices.domain.model.events;

public interface DomainEvent {
}


